# tensorrt

./: CMakeLists.txt  README.MD  README.md  demo.cpp  imagePreprocess.cu  imagePreprocess.cuh  inference.cu  inference.cuh  main.cpp  matchTemplateGpu.cu  matchTemplateGpu.cuh  npyToVector.h  resultTransformate.cu  resultTransformate.cuh  temp.cpp  time_count.h  trtInferenceRunner.h
onnxruntime/: CMakeLists.txt  cnpy.h  imagePreprocess.h  inference.cpp  inference.h  logging.h  main.cpp  npyToVector.h  onnxInferenceRun.cpp  onnxInferenceRun.h  onnxLog.cpp  onnxLog.h  resultTransformate.h  time_count.h
